Fix @sylvlecl implementation details comments
Signed-off-by: Thomas ADAM <tadam@silicom.fr>